TP7-Types/tests/bad/t05.ml
(* Incohérence BOOL vs INT *)
let a : bool = true ;;
print_int (a * 2) ;;
